--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="PbCazgZ85lZn_a1ipewp2LwO90lo7T-ybCosnPr6btk" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
-    
+    <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/bttn.css/0.2.4/bttn.min.css">
     <title>Decentralize Justice</title>
   </head>
   <body>
